--- a/OHET_Project/OHET_Project/Views/Items/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Items/Index.cshtml
@@ -35,7 +35,7 @@
         <td>
             @Html.ActionLink("Details", "Details", new { id = item.IDItem })
         </td>
-        @if (!User.Identity.Name.IsEmpty())
+        @if (@item.Content.ApplicationUserId == ViewBag.userId)
         {
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.IDItem }) |
