Allowed role Admin to Edit and Delete every type of content.

--- a/OHET_Project/OHET_Project/Views/Items/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Items/Index.cshtml
@@ -35,7 +35,7 @@
         <td>
             @Html.ActionLink("Details", "Details", new { id = item.IDItem })
         </td>
-        @if (@item.Content.ApplicationUserId == ViewBag.userId)
+        @if (@item.Content.ApplicationUserId == ViewBag.userId || User.IsInRole("Admin"))
         {
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.IDItem }) |
