--- a/OHET_Project/OHET_Project/Views/Monsters/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Monsters/Index.cshtml
@@ -49,7 +49,7 @@
         <td>
             @Html.ActionLink("Details", "Details", new { id = item.IDMonster })
         </td>
-        @if (@item.Content.ApplicationUserId == ViewBag.userId)
+        @if (@item.Content.ApplicationUserId == ViewBag.userId || User.IsInRole("Admin"))
         {
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.IDMonster }) |
