--- a/OHET_Project/OHET_Project/Views/Posts/Details.cshtml
+++ b/OHET_Project/OHET_Project/Views/Posts/Details.cshtml
@@ -56,7 +56,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Date)
             </td>
-            @if (item.ApplicationUserId == ViewBag.userId)
+            @if (item.ApplicationUserId == ViewBag.userId || item.Post.ApplicationUserId == ViewBag.userId || User.IsInRole("Admin"))
             {
                 <td>
                     @Html.ActionLink("Edit", "Edit", "Comments",new { id = @item.IDComment }, new {}) |
