Fixed banning and unbanning.

--- a/OHET_Project/OHET_Project/Views/ApplicationUsers/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/ApplicationUsers/Index.cshtml
@@ -21,12 +21,14 @@
         @if (@item.Roles.SingleOrDefault().RoleId == "3")
         {
             <td>
+                @Html.ActionLink("Change Role", "ChangeRole", new { id = item.Id }) |
                 @Html.ActionLink("Unban", "Unban", new { id = item.Id })
             </td>
         }
         else
         {
             <td>
+                @Html.ActionLink("Change Role", "ChangeRole", new { id = item.Id }) |
                 @Html.ActionLink("Ban", "Ban", new { id = item.Id })
             </td>
         }
