--- a/OHET_Project/OHET_Project/Views/Classes/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Classes/Index.cshtml
@@ -41,6 +41,9 @@
                 </td>
             }
             <td>
+                @Html.DisplayFor(modelItem => item.isSpellcaster)
+            </td>
+            <td>
                 @Html.ActionLink("Details", "Details", new { id = item.IDClass })
             </td>
             @if (@item.Content.ApplicationUserId == ViewBag.userId || User.IsInRole("Admin"))
