--- a/OHET_Project/OHET_Project/Views/Abilities/Create.cshtml
+++ b/OHET_Project/OHET_Project/Views/Abilities/Create.cshtml
@@ -41,7 +41,8 @@
         *@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                @*<input type="submit" value="Create" class="btn btn-default" />*@
+                <input href="@Url.Action("Create", "Abilities", new { id = ViewBag.IDClass })" type="submit" value="Create" class="btn btn-default"/>
             </div>
         </div>
     </div>
