--- a/OHET_Project/OHET_Project/Views/Comments/Create.cshtml
+++ b/OHET_Project/OHET_Project/Views/Comments/Create.cshtml
@@ -49,7 +49,8 @@
         *@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                @*<input type="submit" value="Create" class="btn btn-default" />*@
+                <input href="@Url.Action("Create", "Comments", new { id = ViewBag.IDPost })" type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
     </div>
