Added cascade delete & publish post & small fixes.

--- a/OHET_Project/OHET_Project/Views/Classes/Details.cshtml
+++ b/OHET_Project/OHET_Project/Views/Classes/Details.cshtml
@@ -33,7 +33,7 @@
     </p>
     }
     <table>
-        @foreach (var item in Model.abilities)
+        @foreach (var item in Model.abilities.OrderBy(x => x.conceptLvl))
         {
             <tr>
                 <td>
