--- a/OHET_Project/OHET_Project/Views/ApplicationUsers/ChangeRole.cshtml
+++ b/OHET_Project/OHET_Project/Views/ApplicationUsers/ChangeRole.cshtml
@@ -114,10 +114,10 @@
             </div>
         </div>
         *@
-
+        
         <div class="form-group">
             <div class="col-md-10">
-                @Html.DropDownList("Roles", ViewBag.Roles as SelectList, String.Empty)
+                @Html.DropDownList("Roles", null, htmlAttributes: new { @class = "form-control" })
             </div>
         </div>
 
