--- a/OHET_Project/OHET_Project/Views/Spells/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Spells/Index.cshtml
@@ -21,7 +21,7 @@
     </p>
 }
 
-@foreach (var i in Model.Where(x => x.Content.isOfficial==true || x.Content.ApplicationUserId==ViewBag.userId).Select(c => c.Class.IDClass).Distinct().ToArray()) {
+@foreach (var i in Model.OrderBy(o => o.Class.name).Where(x => x.Content.isOfficial==true || x.Content.ApplicationUserId==ViewBag.userId).Select(c => c.Class.IDClass).Distinct().ToArray()) {
     <h2>@Html.DisplayName(Model.Where(a => a.Class.IDClass == i).Select(aa => aa.Class.name).FirstOrDefault())</h2>
     <table class="table">
         @*
@@ -38,7 +38,7 @@
             <th></th>
         </tr>
         *@
-    @foreach (var item in Model.OrderBy(x => x.conceptLvl)) {
+    @foreach (var item in Model.OrderBy(x => x.name).OrderBy(y => y.conceptLvl)) {
         if (item.IDClass == i)
         {
             if (@item.Content.ApplicationUserId == ViewBag.userId || @item.Content.isOfficial == true)
