--- a/OHET_Project/OHET_Project/Views/Classes/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Classes/Index.cshtml
@@ -21,7 +21,7 @@
         <th></th>
     </tr>
     *@
-@foreach (var item in Model) {
+@foreach (var item in Model.OrderBy(x => x.name)) {
     if (@item.Content.ApplicationUserId == ViewBag.userId || @item.Content.isOfficial == true)
     {
         <tr>
