--- a/OHET_Project/OHET_Project/Views/Contents/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Contents/Index.cshtml
@@ -48,7 +48,7 @@
         </th>
         <th></th>
     </tr>
-    @foreach (var item in Model.FavCons)
+    @foreach (var item in Model.FavCons.OrderBy(x => x.ApplicationUser.UserName))
     {
         if (ViewBag.userId == item.ApplicationUserId)
         {
@@ -74,7 +74,7 @@
         </th>
         <th></th>
     </tr>
-    @foreach (var item in Model.Contents)
+    @foreach (var item in Model.Contents.OrderBy(x => x.ApplicationUser.UserName))
     {
         if (ViewBag.userId != item.ApplicationUserId && @item.isPublic == true && @item.isOfficial == false)
         {
