--- a/OHET_Project/OHET_Project/Views/Monsters/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Monsters/Index.cshtml
@@ -34,7 +34,7 @@
         <th></th>
     </tr>
     *@
-@foreach (var item in Model) {
+@foreach (var item in Model.OrderBy(x => x.name).OrderBy(y => y.conceptLvl)) {
     if (@item.Content.ApplicationUserId == ViewBag.userId || @item.Content.isOfficial == true)
     {
     <tr>
