--- a/OHET_Project/OHET_Project/Views/Rules/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Rules/Index.cshtml
@@ -31,7 +31,7 @@
         <th></th>
     </tr>
     *@
-@foreach (var item in Model) {
+@foreach (var item in Model.OrderBy(x => x.title)) {
     if (@item.Content.ApplicationUserId == ViewBag.userId || @item.Content.isOfficial == true)
     {
     <tr>
