--- a/OHET_Project/OHET_Project/Views/Shared/_Layout.cshtml
+++ b/OHET_Project/OHET_Project/Views/Shared/_Layout.cshtml
@@ -30,12 +30,7 @@
             <li>@Html.ActionLink("My characters", "Index", "Heroes", new { area = "" }, new { @class = "navbar-brand" })</li>
             <li>@Html.ActionLink("Create Character", "Create", "Heroes", new { area = "" }, new { @class = "navbar-brand" })</li>
             <li>@Html.ActionLink("Manage Contents", "Index", "Contents", new { area = "" }, new { @class = "navbar-brand" })</li>
-            <li>@Html.ActionLink("Classes", "Index", "Classes", new { area = "" }, new { @class = "navbar-brand" })</li>
-            <li>@Html.ActionLink("Rules", "Index", "Rules", new { area = "" }, new { @class = "navbar-brand" })</li>
-            <li>@Html.ActionLink("Adventures", "Index", "Adventures", new { area = "" }, new { @class = "navbar-brand" })</li>
-            <li>@Html.ActionLink("Items", "Index", "Items", new { area = "" }, new { @class = "navbar-brand" })</li>
-            <li>@Html.ActionLink("Spells", "Index", "Spells", new { area = "" }, new { @class = "navbar-brand" })</li>
-            <li>@Html.ActionLink("Monsters", "Index", "Monsters", new { area = "" }, new { @class = "navbar-brand" })</li>
+            <li>@Html.ActionLink("Content", "Content", "Home", new { area = "" }, new { @class = "navbar-brand" })</li>
         </ul>
     </nav>
 
