--- a/OHET_Project/OHET_Project/Views/Rules/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Rules/Index.cshtml
@@ -38,16 +38,17 @@
         <td>
             @Html.DisplayFor(modelItem => item.title)
         </td>
-        @if (@item.description.Substring(0, @item.description.IndexOf('.')) == @item.description.Substring(0, @item.description.Length - 1))
+        @if (@item.description.Split().ToArray().Length <= 20)
         {
             <td>
-                @item.description.Substring(0, @item.description.IndexOf('.') + 1)
+                @item.description
             </td>
         }
         else
         {
             <td>
-                @item.description.Substring(0, @item.description.IndexOf('.') + 1) @Html.ActionLink("...", "Details", new { id = item.IDRule })
+                @String.Join(" ", @item.description.Split().Take(20))
+                @Html.ActionLink("...", "Details", new { id = item.IDRule })
             </td>
         }
         <td>
